--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies":{
+    "express":"*",
+    "body-parser":"*"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/prahaladbelavadi/express-crash_course.git"
